--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,1 +1,13 @@
-<h1>I'm in the AppComponent</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in the AppComponent</h3>
+      <hr>
+      <app-server></app-server>
+      <hr>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
+
+
