--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -2,18 +2,10 @@
   Server Name
 </label>
 
-<!--<input-->
-  <!--type="text"-->
-  <!--class="form-control"-->
-  <!--(input)="onUpdatedServerName($event)">-->
-
 <input
   type="text"
   class="form-control"
   [(ngModel)]="serverName">
-<p>
-  {{ serverName }}
-</p>
 
 <button
   class="btn btn-primary"
@@ -22,6 +14,27 @@
   Add server
 </button>
 
-<p>
+<app-server *ngFor="let server of servers"></app-server>
+
+<p *ngIf="serverCreated; else noServer">
   {{serverCreationStatus}}
 </p>
+
+<ng-template #noServer>
+  <p>
+    No server was created
+  </p>
+</ng-template>
+
+<hr>
+
+<p
+  [ngStyle]="{backgroundColor:getColor()}"
+  [ngClass]="{five: numberOfHides >= 5}">
+  {{ numberOfHides }}
+</p>
+
+<button class="btn btn-primary" (click)="hideParagraph()">
+  Dispaly Details
+</button>
+<p [hidden]="hide"> Secret Password = Tuna</p>
