--- a/base-project/src/app/app.component.html
+++ b/base-project/src/app/app.component.html
@@ -3,7 +3,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>I'm working!</h2>
+       <app-recipe-book>
+
+        </app-recipe-book>
+
+        <app-shopping-list>
+
+        </app-shopping-list>
+
+
+
     </div>
   </div>
 </div>
